languages/CNNTrainLang/src/test/resources/invalid_cocos_tests/CheckInputMissing.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration CheckInputMissing {
    learning_method: gan
    discriminator_name: mnistGenerator.Discriminator
    num_epoch: 10
    batch_size: 64
    normalize: false
    context: cpu
    print_images: true
    log_period: 10
    load_checkpoint: false
    generator_loss_weight: 0.5
    discriminator_loss_weight: 0.5
    k_value: 1
    optimizer: adam{
            learning_rate: 0.0002
            beta1: 0.5
    }
    discriminator_optimizer: adam{
            learning_rate: 0.0002
            beta1:0.5
    }
}
